tests/cases/smoke/invalid/const_reassign_after_late_init.dp
const MAX_USERS: int
MAX_USERS = 100
MAX_USERS = 101
